--- a/financial-planning.html
+++ b/financial-planning.html
@@ -51,7 +51,7 @@
             <a href="#">
               <img
                 class="bookmark"
-                src="./assets/img/bookmark.png"
+                src="./assets/vector/bookmark.svg"
                 alt="bookmark"
               />
             </a>
@@ -126,9 +126,133 @@
         </table>
       </section>
 
-      <section id="stockbroker-shutdown" class="my-5 page-container">
+      <section class="mt-5 page-container">
         <h2 class="text-center">What Happens If Stockbroker Shuts Down?</h2>
+      </section>
 
+      <div class="timeline-wrapper">
+        <div class="middle-line"></div>
+
+        <div class="timeline-main">
+          <div class="item">
+            <div class="circle"></div>
+            <img
+              class="arrow"
+              src="./assets/vector/timeline-content-arrow.svg"
+              alt=""
+            />
+            <div class="content">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-9 text">
+                    <p>
+                      Identify investment products and make SIP*/ lumpsum
+                      investment
+                    </p>
+                  </div>
+                  <div class="col-3 img">
+                    <img src="./assets/vector/timeline-1.svg" alt="timeline" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="circle"></div>
+            <img
+              class="arrow"
+              src="./assets/vector/timeline-content-arrow.svg"
+              alt=""
+            />
+            <div class="content">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-9 text">
+                    <p>
+                      Identify investment products and make SIP*/ lumpsum
+                      investment
+                    </p>
+                  </div>
+                  <div class="col-3 img">
+                    <img src="./assets/vector/timeline-2.svg" alt="timeline" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="circle"></div>
+            <img
+              class="arrow"
+              src="./assets/vector/timeline-content-arrow.svg"
+              alt=""
+            />
+            <div class="content">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-9 text">
+                    <p>
+                      Identify investment products and make SIP*/ lumpsum
+                      investment
+                    </p>
+                  </div>
+                  <div class="col-3 img">
+                    <img src="./assets/vector/timeline-3.svg" alt="timeline" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="circle"></div>
+            <img
+              class="arrow"
+              src="./assets/vector/timeline-content-arrow.svg"
+              alt=""
+            />
+            <div class="content">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-9 text">
+                    <p>
+                      Identify investment products and make SIP*/ lumpsum
+                      investment
+                    </p>
+                  </div>
+                  <div class="col-3 img">
+                    <img src="./assets/vector/timeline-3.svg" alt="timeline" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="circle"></div>
+            <img
+              class="arrow"
+              src="./assets/vector/timeline-content-arrow.svg"
+              alt=""
+            />
+            <div class="content">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-9 text">
+                    <p>
+                      Identify investment products and make SIP*/ lumpsum
+                      investment
+                    </p>
+                  </div>
+                  <div class="col-3 img">
+                    <img src="./assets/vector/timeline-1.svg" alt="timeline" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section id="stockbroker-shutdown" class="mb-5 page-container">
         <div class="container-fluid my-5">
           <div class="row">
             <div class="col-md-4">
