makes chart responsive

--- a/financial-planning.html
+++ b/financial-planning.html
@@ -328,7 +328,9 @@
         </div>
       </div>
 
-      <canvas id="line-chart" width="" height=""></canvas>
+      <div class="chart-container">
+        <canvas id="line-chart" width="" height=""></canvas>
+      </div>
 
       <section id="stockbroker-shutdown" class="page-container">
         <div class="main">
