fixes table responsiveness

--- a/financial-planning.html
+++ b/financial-planning.html
@@ -96,42 +96,44 @@
             each of the goals like:
           </p>
 
-          <!-- <div class="table-container"> -->
-          <table class="mt-5" style="">
-            <thead>
-              <tr>
-                <th>Goals(s)</th>
-                <th>Time Horizon</th>
-                <th>Target Amount</th>
-              </tr>
-              <tr>
-                <td>Retirement</td>
-                <td>60 yars of age</td>
-                <td>Coverage of expenses till life expectancy</td>
-              </tr>
-              <tr>
-                <td>Emergency Fund</td>
-                <td>0-4 years</td>
-                <td>4 months of monthly income</td>
-              </tr>
-              <tr>
-                <td>Car</td>
-                <td>0-5 years</td>
-                <td>12 months of monthly income</td>
-              </tr>
-              <tr>
-                <td>Home</td>
-                <td>0-7 years</td>
-                <td>48 months of monthly income</td>
-              </tr>
-              <tr>
-                <td>Travel</td>
-                <td>0-3 years</td>
-                <td>10% annual income</td>
-              </tr>
-            </thead>
-          </table>
-          <!-- </div> -->
+          <div class="table-container" style="">
+            <table class="mt-5" style="">
+              <thead>
+                <tr>
+                  <th>Goals(s)</th>
+                  <th>Time Horizon</th>
+                  <th>Target Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Retirement</td>
+                  <td>60 yars of age</td>
+                  <td>Coverage of expenses till life expectancy</td>
+                </tr>
+                <tr>
+                  <td>Emergency Fund</td>
+                  <td>0-4 years</td>
+                  <td>4 months of monthly income</td>
+                </tr>
+                <tr>
+                  <td>Car</td>
+                  <td>0-5 years</td>
+                  <td>12 months of monthly income</td>
+                </tr>
+                <tr>
+                  <td>Home</td>
+                  <td>0-7 years</td>
+                  <td>48 months of monthly income</td>
+                </tr>
+                <tr>
+                  <td>Travel</td>
+                  <td>0-3 years</td>
+                  <td>10% annual income</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         <aside class="explore">
           <h3>Browse by tags</h3>
