sets max-width to first section, fixes responsiveness of chart, adds hover to cards

--- a/financial-planning.html
+++ b/financial-planning.html
@@ -96,8 +96,8 @@
             each of the goals like:
           </p>
 
-          <div class="table-container" style="">
-            <table class="mt-5" style="">
+          <div class="table-container">
+            <table class="mt-5">
               <thead>
                 <tr>
                   <th>Goals(s)</th>
@@ -330,9 +330,12 @@
         </div>
       </div>
 
-      <div class="chart-container">
-        <canvas id="line-chart" width="" height=""></canvas>
-      </div>
+      <section id="chart-container" class="page-container">
+        <div class="main">
+          <canvas id="line-chart" style="width: 100% !important"></canvas>
+        </div>
+        <aside></aside>
+      </section>
 
       <section id="stockbroker-shutdown" class="page-container">
         <div class="main">
