--- a/financial-planning.html
+++ b/financial-planning.html
@@ -330,12 +330,12 @@
         </div>
       </div>
 
-      <!-- <section id="chart-container" class="page-container">
+      <section id="chart-container" class="page-container">
         <div class="main">
           <canvas id="line-chart" style="width: 100% !important"></canvas>
         </div>
         <aside></aside>
-      </section> -->
+      </section>
 
       <section id="stockbroker-shutdown" class="page-container">
         <div class="main">
