matches chart with design

--- a/financial-planning.html
+++ b/financial-planning.html
@@ -332,6 +332,25 @@
 
       <section id="chart-container" class="page-container">
         <div class="main">
+          <div class="legend">
+            <div class="title">WEEKLY PROJECT VIEWS</div>
+            <h1>
+              401
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20.658"
+                height="18.937"
+                viewBox="0 0 20.658 18.937"
+              >
+                <path
+                  id="Polygon_12"
+                  data-name="Polygon 12"
+                  d="M9.451,1.609a1,1,0,0,1,1.756,0l8.645,15.849a1,1,0,0,1-.878,1.479H1.685a1,1,0,0,1-.878-1.479Z"
+                  fill="#0eb280"
+                />
+              </svg>
+            </h1>
+          </div>
           <canvas id="line-chart" style="width: 100% !important"></canvas>
         </div>
         <aside></aside>
