adds proper commenting

--- a/financial-planning.html
+++ b/financial-planning.html
@@ -18,6 +18,8 @@
     <title>What is Financial Planning?</title>
   </head>
   <body>
+    <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
+
     <nav id="navbar">
       <a href="#" class="logo">
         <img src="./assets/vector/logo.svg" alt="logo" />
@@ -37,8 +39,14 @@
       </div>
     </nav>
 
+    <!-- --------------------------------------------- NAVBAR END --------------------------------------------- -->
+
+    <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
+
     <main>
-      <section id="financial-planning" class="page-container">
+      <!-- --------------------------------------------- FINANCIAL PLANNING START --------------------------------------------- -->
+
+      <section id="financial-planning-abbr" class="page-container">
         <div class="main">
           <h1>What is Financial Planning?</h1>
 
@@ -201,12 +209,20 @@
         </aside>
       </section>
 
+      <!-- --------------------------------------------- FINANCIAL PLANNING END --------------------------------------------- -->
+
+      <!-- --------------------------------------------- STOCKBROCKER (PART I) START --------------------------------------------- -->
+
       <section class="mt-5 page-container">
         <div class="main">
           <h2 class="text-center">What Happens If Stockbroker Shuts Down?</h2>
         </div>
         <aside></aside>
       </section>
+
+      <!-- --------------------------------------------- STOCKBROCKER (PART I) END --------------------------------------------- -->
+
+      <!-- --------------------------------------------- TIMELINE START --------------------------------------------- -->
 
       <div class="timeline-wrapper">
         <div class="middle-line"></div>
@@ -330,6 +346,8 @@
         </div>
       </div>
 
+      <!-- --------------------------------------------- TIMELINE END --------------------------------------------- -->
+
       <section id="chart-container" class="page-container">
         <div class="main">
           <div class="legend">
@@ -355,6 +373,10 @@
         </div>
         <aside></aside>
       </section>
+
+      <!-- --------------------------------------------- CHART END --------------------------------------------- -->
+
+      <!-- --------------------------------------------- STOCKBROCKER (PART I) START --------------------------------------------- -->
 
       <section id="stockbroker-shutdown" class="page-container">
         <div class="main">
@@ -789,6 +811,10 @@
         <aside></aside>
       </section>
 
+      <!-- --------------------------------------------- STOCKBROCKER (PART I) END --------------------------------------------- -->
+
+      <!-- --------------------------------------------- FINANCIAL PLANNING START --------------------------------------------- -->
+
       <section id="financial-planning" class="page-container mt-5 pt-4">
         <div class="main">
           <h2 class="mb-4">
@@ -820,6 +846,10 @@
         </div>
         <aside></aside>
       </section>
+
+      <!-- --------------------------------------------- FINANCIAL PLANNING END --------------------------------------------- -->
+
+      <!-- --------------------------------------------- REVIEWS / COMMENTS START --------------------------------------------- -->
 
       <section id="reviews" class="page-container">
         <div class="main">
@@ -905,6 +935,10 @@
         <aside></aside>
       </section>
 
+      <!-- --------------------------------------------- REVIEWS / COMMENTS END --------------------------------------------- -->
+
+      <!-- --------------------------------------------- NAVIGATION START --------------------------------------------- -->
+
       <section id="navigate" class="page-container mb-5">
         <div class="main">
           <div class="nav-btns">
@@ -915,6 +949,10 @@
         </div>
         <aside></aside>
       </section>
+
+      <!-- --------------------------------------------- NAVIGATION END --------------------------------------------- -->
+
+      <!-- --------------------------------------------- SUGGESTIONS START --------------------------------------------- -->
 
       <section
         id="suggestions"
@@ -992,9 +1030,18 @@
           </div>
         </div>
       </section>
+
+      <!-- --------------------------------------------- SUGGESTIONS END --------------------------------------------- -->
     </main>
 
+    <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
+
+    <!-- --------------------------------------------- Chart.js script --------------------------------------------- -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
+    <!-- --------------------------------------------- Custom script --------------------------------------------- -->
+
     <script src="./assets/js/financial-planning.js"></script>
   </body>
 </html>
