adds comments to stylesheet

--- a/financial-planning.html
+++ b/financial-planning.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap-utilities.min.css" />
     <link rel="stylesheet" href="./assets/css/bootstrap-gird.min.css" />
 
-    <!-- STYLESHEET -->
+    <!-- CUSTOM STYLESHEETS -->
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="./assets/css/utilities.css" />
