fixes ID of the top section

--- a/financial-planning.html
+++ b/financial-planning.html
@@ -815,7 +815,7 @@
 
       <!-- --------------------------------------------- FINANCIAL PLANNING START --------------------------------------------- -->
 
-      <section id="financial-planning" class="page-container mt-5 pt-4">
+      <section id="financial-planning-example" class="page-container mt-5 pt-4">
         <div class="main">
           <h2 class="mb-4">
             Financial Planning Explained Via <span class="badge">Example</span>
