--- a/financial-planning.html
+++ b/financial-planning.html
@@ -99,23 +99,26 @@
             </div>
           </div>
 
-          <p>
+          <abbr>
             <button>
               <img src="./assets/vector/play.svg" class="play" alt="play" />
             </button>
-            One of the key objectives of a financial plan is to educate
-            individuals towards their financial capacity and risk appetite.
-            Assessment of household income, expenses and age is the first step
-            towards devising a financial plan. A key aspect of the financial
-            plan involves assessing risk appetite (conservative, moderate, or
-            aggressive) of an individual which is nothing but deciding upon
-            allocation of savings into equity, debt and cash instruments. One
-            should never think of devising a financial plan without professional
-            help of a SEBI certified Registered Investment Advisor (RIA). The
-            financial advisor not only helps in identifying SMART** financial
-            goals but also helps in identifying the target amount required for
-            each of the goals like:
-          </p>
+
+            <p>
+              One of the key objectives of a financial plan is to educate
+              individuals towards their financial capacity and risk appetite.
+              Assessment of household income, expenses and age is the first step
+              towards devising a financial plan. A key aspect of the financial
+              plan involves assessing risk appetite (conservative, moderate, or
+              aggressive) of an individual which is nothing but deciding upon
+              allocation of savings into equity, debt and cash instruments. One
+              should never think of devising a financial plan without
+              professional help of a SEBI certified Registered Investment
+              Advisor (RIA). The financial advisor not only helps in identifying
+              SMART** financial goals but also helps in identifying the target
+              amount required for each of the goals like:
+            </p>
+          </abbr>
 
           <div class="table-container">
             <table class="mt-5">
@@ -245,12 +248,15 @@
         <div class="timeline-main">
           <div class="item">
             <div class="circle"></div>
-            <img
+            <!-- <img
               class="arrow"
               src="./assets/vector/timeline-content-arrow.svg"
               alt=""
-            />
+            /> -->
             <div class="content">
+              <div class="arrow-container">
+                <div class="arrow"></div>
+              </div>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-9 text">
@@ -268,12 +274,15 @@
           </div>
           <div class="item">
             <div class="circle"></div>
-            <img
+            <!-- <img
               class="arrow"
               src="./assets/vector/timeline-content-arrow.svg"
               alt=""
-            />
+            /> -->
             <div class="content">
+              <div class="arrow-container">
+                <div class="arrow"></div>
+              </div>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-9 text">
@@ -291,12 +300,15 @@
           </div>
           <div class="item">
             <div class="circle"></div>
-            <img
+            <!-- <img
               class="arrow"
               src="./assets/vector/timeline-content-arrow.svg"
               alt=""
-            />
+            /> -->
             <div class="content">
+              <div class="arrow-container">
+                <div class="arrow"></div>
+              </div>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-9 text">
@@ -314,12 +326,15 @@
           </div>
           <div class="item">
             <div class="circle"></div>
-            <img
+            <!-- <img
               class="arrow"
               src="./assets/vector/timeline-content-arrow.svg"
               alt=""
-            />
+            /> -->
             <div class="content">
+              <div class="arrow-container">
+                <div class="arrow"></div>
+              </div>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-9 text">
@@ -337,12 +352,15 @@
           </div>
           <div class="item">
             <div class="circle"></div>
-            <img
+            <!-- <img
               class="arrow"
               src="./assets/vector/timeline-content-arrow.svg"
               alt=""
-            />
+            /> -->
             <div class="content">
+              <div class="arrow-container">
+                <div class="arrow"></div>
+              </div>
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-9 text">
