--- a/financial-planning.html
+++ b/financial-planning.html
@@ -420,8 +420,8 @@
                   <div class="col-9 col-sm-8">
                     <h2>
                       Points To <br />
-                      <small>Remember</small>
-                    </h2>
+                      Remember
+                    </h2> 
                   </div>
                   <div class="col-3 col-sm-4">
                     <img
