investment ready page complete

--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -21,7 +21,7 @@
     <div id="dark-overlay"></div>
 
     <section id="allocation-confirm">
-      <div class="modal small-width">
+      <div class="custom-modal small-width">
         <div class="close">
           <img src="./assets/images/close.svg" alt="close" />
         </div>
@@ -40,11 +40,11 @@
           <div class="text-fields">
             <div class="control">
               <h4 class="text-light-2">Allocation</h4>
-              <input class="active" type="text" value="30%" />
+              <input class="custom-input active" type="text" value="30%" />
             </div>
             <div class="control">
               <h4 class="text-light-2">Amount</h4>
-              <input type="text" value="₹9,000" />
+              <input class="custom-input" type="text" value="₹9,000" />
             </div>
           </div>
 
@@ -68,6 +68,6 @@
     </section>
 
     <script src="./assets/js/jquery.min.js"></script>
-  <script src="./assets/js/common.js"></script>
+    <script defer src="./assets/js/common.js"></script>
   </body>
 </html>
