--- a/service.html
+++ b/service.html
@@ -182,7 +182,7 @@
                       for="textdemo1"
                       >Monthly Household Income
 
-                      <div class="custom-tooltip" style="">
+                      <div class="custom-tooltip">
                         Please provide a valid income details more than 2000
 
                         <div class="arrow"></div>
