--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -38,11 +38,11 @@
         </div>
         <div class="modal-body">
           <div class="text-fields">
-            <div class="control">
+            <div class="custom-form-control">
               <h4 class="text-light-2">Allocation</h4>
               <input class="custom-input active" type="text" value="30%" />
             </div>
-            <div class="control">
+            <div class="custom-form-control">
               <h4 class="text-light-2">Amount</h4>
               <input class="custom-input" type="text" value="₹9,000" />
             </div>
