--- a/investment-ready.html
+++ b/investment-ready.html
@@ -84,7 +84,7 @@
                 </h1>
               </div>
               <div class="confirmation">
-                <div class="control">
+                <div class="custom-form-control">
                   <h4 class="text-light-2 mb-2">PAN</h4>
                   <input
                     type="text"
